--- a/resources/css/TodoList.css
+++ b/resources/css/TodoList.css
@@ -1,52 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap');
-
-* {
-	box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: "Yeon Sung", system-ui;
-    font-weight: 400;
-    font-style: normal;
+.todo_container {
+    min-width: 300px;
+    width: 50vw;
+    height: 90vh;
+    padding: 20px;
+    margin: 1em auto;
+    background-color: #ffe8ad9c;
+    text-align: center;
 }
 
-body {
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0;
-    min-height: 100vh;
-    font-size: 18px;
-}
-
-h1 {
+.todo_container h1 {
     margin: 0;
     margin-bottom: 12px;
 }
 
-.todo-container {
-    min-width: 400px;
-    width: 50vw;
-    height: 90vh;
-    padding: 20px;
-    background-color: #ffe8ad9c;
-    text-align: center;
-}
-#inputField {
+.todo_container #inputField {
     margin-bottom: 1em;
 }
-#inputField #todoInput {
+
+.todo_container #inputField #todoInput {
     width: calc(100% - 45px);
     border: 1px solid #eee;
     border-radius: 4px;
     padding: 10px;
 }
 
-#inputField #todoInput:focus {
+.todo_container #inputField #todoInput:focus {
     outline: none;
 }
 
-.btn {
+.todo_container .btn {
     position: relative;
     width: 35px;
     height: 35px;
@@ -57,7 +39,7 @@ h1 {
     vertical-align: middle;
 }
 
-.btn span {
+.todo_container .btn span {
     display: block;
     width: 2px;
     height: 15px;
@@ -67,28 +49,28 @@ h1 {
     left: 50%;
 }
 
-.btn.addBtn span {
+.todo_container .btn.addBtn span {
     transform: translate(-50%,-50%);
 }
 
-.btn.addBtn span:last-child {
+.todo_container .btn.addBtn span:last-child {
     transform: translate(-50%,-50%) rotate(-90deg);
 }
 
-.btn.delBtn {
+.todo_container .btn.delBtn {
     width: 25px;
     height: 25px;
     background-color: rgba(255, 85, 23, 0.705);
 }
 
-.btn.delBtn span {
+.todo_container .btn.delBtn span {
     transform: translate(-50%,-50%) rotate(45deg);
 }
 
-.btn.delBtn span:last-child {
+.todo_container .btn.delBtn span:last-child {
     transform: translate(-50%,-50%) rotate(-45deg);
 }
 
-#table { 
+.todo_container #table { 
     width: 100%;
 }
