--- a/resources/css/roomB.css
+++ b/resources/css/roomB.css
@@ -16,3 +16,11 @@
 #roomB_wrap div.imgBox img {
     width: 300px;
 }
+
+#roomB_wrap div.imgBox img#img_rd {
+    content: url(/public/resources/img/rubber_duck.jpg);
+}
+
+#roomB_wrap div.imgBox img#img_rds {
+    content: url(/public/resources/img/rubber_duck_side.png);
+}
